--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -9,6 +9,7 @@ Premium: http://www.gridgum.com
 /* Import fonts */
 @import url(http://fonts.googleapis.com/css?family=Ruda:400,700,900);
 
+ 
 /* BASIC THEME CONFIGURATION */
 body {
     color: #797979;
@@ -984,6 +985,16 @@ PANELS CONFIGURATIONS
 
 /*Panel Size*/
 
+
+.pe{
+    height: 226px;
+    box-shadow: 0 2px 1px rgba(0, 0, 0, 0.2);
+}
+.re {
+    height: 120px;
+    box-shadow: 0 2px 1px rgba(0, 0, 0, 0.2);
+}
+
 .pn {
 	height: 250px;
 	box-shadow: 0 2px 1px rgba(0, 0, 0, 0.2);
@@ -1085,8 +1096,16 @@ PANELS CONFIGURATIONS
 .white-panel p {
 	margin-top: 5px;
 	font-weight: 700;
-	margin-left: 15px;
+	margin-left: 13px;
 }
+.paragraph {
+   color: #333;
+    margin-left: 30px;
+}
+.buttonCenter{
+    margin-left: 0px;
+}
+
 .white-panel .white-header {
 	background: #f4f4f4;
 	padding: 3px;
@@ -1102,6 +1121,9 @@ PANELS CONFIGURATIONS
 	color: #68dff0;
 	padding-right: 4px;
 	font-size: 14px;
+}
+.white-size{
+    font-size: 18px;
 }
 
 /*STOCK CARD Panel*/
