Cambios en la funcion edit para que todo el valor del id a traves Auth Cambios en la funcion update para procesar la imagn del documento y evitar la asigancion null cuando no se cargaba otra imagen
Cambios en style para mejorar la vista

main.js archivo para la validaciones por teclado

Asignacion de nuevas rutas en app

Creacion de pantallas edit, Mylecture, My music, My Reading
  -Mymusic falta el agregar a lista de reproduccion
  -Mylecture falta mostrar el pdf actualmente presenta fallas

pantallas con el old son pantallas viejas que se estan usando de guia

en el archivo route/web se agrego la ruta para EditProfile

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1043,6 +1043,10 @@ PANELS CONFIGURATIONS
     height: 190px;
     box-shadow: 0 2px 1px rgba(0, 0, 0, 0.2);
 }
+.pn-musir{
+    height:  220%;
+    box-shadow: 0 2px 1px rgba(0, 0, 0, 0.2);
+}
 
 /*Grey Panel*/
 
@@ -1563,7 +1567,7 @@ PANELS CONFIGURATIONS
 /* PROFILE PANELS */
 /* Profile 01*/
 #profile-01 {
-	background: url(../img/profile-01.jpg) no-repeat center top;
+	/*background: url(../img/profile-01.jpg) no-repeat center top;*/
 	margin-top: -15px;
 	background-attachment: relative;
 	background-position: center center;
@@ -2317,4 +2321,8 @@ label {
     min-height: 900px;
 }
 
+.row-edit{
+    
+    margin-left: 10px;
+}
 
