--- a/public/plugins/carusel/css/style.css
+++ b/public/plugins/carusel/css/style.css
@@ -23,7 +23,7 @@
 	right:0px;
 	padding:4px 15px;
 	font-weight:bold;
-	background: #23b5e6;
+	background: #426fac;
 	text-align:center;
 	color: white;
 	font-family: "Georgia","Times New Roman",serif;
@@ -34,7 +34,8 @@
 	position:absolute;
 	top:10px;
 	right:10px;
-	background:#fff url(../images/cross.png) no-repeat center center;
+	background:url(../images/cerrar4.png) no-repeat center center;
+	background-color:rgba(0,0,0) ;
 	width:27px;
 	height:27px;
 	text-indent:-9000px;
@@ -91,7 +92,7 @@
 .ca-item h3{
 	font-family: 'Coustard', sans-serif;
 	text-transform:uppercase;
-	font-size:30px;
+	font-size:20px;
 	color:#000;
 	margin-bottom:20px;
 	height:85px;
@@ -122,8 +123,9 @@
 	text-indent:0px;
 }
 .ca-content-wrapper{
-	/*background:#23b5e6;*/
-	background-color: rgba(116, 223, 236, 0.4);
+	background:#426fac;
+	/*background-color: rgba(116, 223,236,0.5);*/
+    opacity: 0.5;
 	position:absolute;
 	width:0px; /* expands to width of the wrapper minus 1 element */
 	height:440px;
