-Se adaptaron las funciones para los Albums, y las revistas -Se modico la pantalla single para que permita reproductores multiples -Modificar perfil valida si la persona ya tiene una cedula agregada -Se adapto los referidos a traves del envio de correo

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -175,7 +175,11 @@ hr {
   border: 0;
   border-top: 1px solid #797979;
 }
-
+.sinopsis{
+    text-align: justify;
+    margin-left: 3%;
+    margin-right: 3%;
+}
 
 
 /*Helpers*/
