--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1017,7 +1017,7 @@ PANELS CONFIGURATIONS
 
 
 .pe{
-    height: 226px;
+    height: 230px;
     box-shadow: 0 2px 1px rgba(0, 0, 0, 0.2);
 }
 .refe {
@@ -1225,7 +1225,7 @@ PANELS CONFIGURATIONS
 	background: #ffffff;
 	box-shadow: 0px 3px 2px #aab2bd;
 	padding-top: 15px;
-	padding-bottom: 5px;
+	padding-bottom: 0%;
 }
 .content-panel h4 {
 	margin-left: 10px;
