Modulo "Mis Peliculas" listo En el modelo trasactions se cambio la funcion movie ya que presentaba un error Se añadio la imagen de perfil por defecto Se modifico la opcion de refereri por 15 dias mostrando por pantalla cuantos dias le queda al usuario para añadir un codigo Se valido que el codigo de referido que ingresa el usuario no se el de su usuario

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1017,7 +1017,8 @@ PANELS CONFIGURATIONS
 
 
 .pe{
-    height: 230px;
+    height: 100%;
+    display: flow-root;
     box-shadow: 0 2px 1px rgba(0, 0, 0, 0.2);
 }
 .refe {
