--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1032,8 +1032,12 @@ PANELS CONFIGURATIONS
 }
 
 .pn {
-	height: 310px;
+	height: 330px;
 	box-shadow: 0 2px 1px rgba(0, 0, 0, 0.2);
+}
+.pnspoty{
+    height: 250px;
+    box-shadow: 0 2px 1px rgba(0, 0, 0, 0.2);
 }
 
 .pn:hover {
@@ -1041,7 +1045,7 @@ PANELS CONFIGURATIONS
 	
 }
 .pn2 {
-    height: 371px;
+    height: 385px;
     box-shadow: 0 2px 1px rgba(0, 0, 0, 0.2);
 }
 .pn3 {
@@ -1402,7 +1406,7 @@ PANELS CONFIGURATIONS
 }
 
 /* Soptify Panel */
-#spotify {
+/*#spotify {
 	background: url(../img/lorde.jpg) no-repeat center top;
 	margin-top: -15px;
 	background-attachment: relative;
@@ -1417,7 +1421,7 @@ PANELS CONFIGURATIONS
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-}
+}*/
 #spotify .btn-clear-g {
 	top: 15%;
 	right: 10px;
