--- a/public/plugins/index/css/index.css
+++ b/public/plugins/index/css/index.css
@@ -1,3 +1,7 @@
+* {
+    font-family: Roboto;
+}
+
 #containerS {
     position: relative;
     width: 100%;
@@ -189,76 +193,167 @@
     padding-bottom: 0px;
 }
 
-.navbar
-{
+.navbar {
     padding-bottom: 0px;
 }
 
-.navbar .container .navbar-header .navbar-brand
-{
-     padding-top: 0px;
+.navbar .container .navbar-header .navbar-brand {
+    padding-top: 0px;
 }
 
-#logo
- {
-     width: 150px;
-     height: 50px;
- }
+#logo {
+    width: 150px;
+    height: 50px;
+}
 
 #myNavbar li a {
     color: #21a4de;
 }
 
-#banner
-{
+#banner {
     width: 100%;
     height: 700px;
     background-color: #0c0c0c;
     padding-top: 0px;
 }
 
-#list li text
+#leipel h1
 {
+    margin: 20px 0px;
+}
+
+#leipel p
+{
+    color: #ababab;
+}
+
+#list li i {
+    margin-right: 20px;
+    /*padding-right: 20px;*/
+    padding-top: 7px;
+    padding-right: 8px;
+    color: #21a4de;
+    font-size: 30px;
+    text-align: center;
+}
+
+#list li {
     height: 50px;
     padding-top: 0px;
+    color: #ababab;
 }
 
-#list li i
-{
-    margin: 15px 15px;
-    padding-right: 20px;
-    padding-top: 0px;
-    /*color: #ffffff;*/
-    border-style: solid;
-    border-color: #21a4de;
-    font-size: 30px;
+#sobre h1 {
+    font-size: 25px;
+    margin: 20px 0px;
+    height: 50px;
+    padding: 15px 0px;
+    color: #ababab;
 }
 
-.container-fluid > .row
-{
+#sobre a {
+    color: #ababab;
+}
+
+#descubrir h1 {
+    font-size: 25px;
+    margin: 20px 0px;
+    height: 50px;
+    padding: 15px 0px;
+    color: #ababab;
+}
+
+#descubrir a {
+    color: #ababab;
+}
+
+#social h1 {
+    font-size: 25px;
+    margin: 20px 0px;
+    height: 50px;
+    padding: 15px 0px;
+    color: #ababab;
+}
+
+#social a {
+    color: #ababab;
+}
+
+#opinion h1 {
+    font-size: 25px;
+    margin: 20px 0px;
+    height: 50px;
+    padding: 15px 0px;
+    color: #ababab;
+}
+
+.container-fluid > .row {
     /*background: #21a4de;*/
-    background: #ababab;
+    background: #21a4de;
     height: 40px;
-    padding-top: 10px;
+    padding-top: 4px;
     text-align: center;
     color: white;
 }
 
-.container-fluid  .row  a .btn
-{
-    padding-bottom: 10000px;
+.container-fluid > .row p {
+    padding-top: 8px;
+    font-size: 16px;
+    color: #FFFFFF;
 }
 
-.container-fluid > .row a{
-    border-radius: 60px;
-    font-size: 13px;
-    padding-right: 10px;
-    padding-left: 10px;
+.container-fluid > .row a {
+    padding-top: 8px;
+    font-size: 16px;
+    color: #FFFFFF;
 }
 
-#modal-default .modal-content
+#formOp input
 {
-    /*width: 400px;*/
-    /*height: 500px;*/
+    border: 1px;
+    border-style: solid;
+    border-color: #21a4de ;
+}
+
+#formOp textarea
+{
+    border: 1px;
+    border-style: solid;
+    border-color: #21a4de ;
+}
+
+.modal-header {
+    padding: 0;
+}
+.modal-header .close {
+    padding: 10px 15px;
+}
+.modal-header ul {
+    border: none;
+}
+.modal-header ul li {
+    margin: 0;
+}
+.modal-header ul li a {
+    border: none;
+    border-radius: 0;
+}
+.modal-header ul li.active a {
+    color: #21a4de;
+}
+.modal-header ul li a:hover {
+    border: none;
+}
+.modal-header ul li a span {
+    margin-left: 10px;
+}
+.modal-body .form-group {
+    margin-bottom: 10px;
+}
+
+
+#modal_footer a/*propia*/
+{
+    border-radius: 50px;
 }
 
