--- a/public/plugins/index/css/index.css
+++ b/public/plugins/index/css/index.css
@@ -208,6 +208,7 @@
 
 #myNavbar li a {
     color: #21a4de;
+    font-family: Roboto;
 }
 
 #banner {
@@ -220,6 +221,7 @@
 #contentRadio h1
 {
     background: #21a4de;
+    font-family: Roboto;
     padding: 85px 0px;
     font-size: 35px;
     color: white;
@@ -233,6 +235,7 @@
 
 #leipel p
 {
+    font-family: Roboto;
     color: #ababab;
 }
 
@@ -247,6 +250,7 @@
 }
 
 #list li {
+    font-family: Roboto;
     height: 50px;
     padding-top: 0px;
     color: #ababab;
@@ -261,10 +265,12 @@
 }
 
 #sobre a {
+    font-family: Roboto;
     color: #ababab;
 }
 
 #descubrir h1 {
+    font-family: Roboto;
     font-size: 25px;
     margin: 20px 0px;
     height: 50px;
@@ -273,10 +279,12 @@
 }
 
 #descubrir a {
+    font-family: Roboto;
     color: #ababab;
 }
 
 #social h1 {
+    font-family: Roboto;
     font-size: 25px;
     margin: 20px 0px;
     height: 50px;
@@ -285,10 +293,12 @@
 }
 
 #social a {
+    font-family: Roboto;
     color: #ababab;
 }
 
 #opinion h1 {
+    font-family: Roboto;
     font-size: 25px;
     margin: 20px 0px;
     height: 50px;
@@ -298,27 +308,37 @@
 
 textarea
 {
+
     resize: none;
 }
 
-.container-fluid > .row {
+
+
+.container-fluid .row {
     /*background: #21a4de;*/
+    font-family: Roboto;
     background: #21a4de;
     height: 40px;
-    padding-top: 4px;
+    padding-top: 8px;
     text-align: center;
     color: white;
 }
 
-.container-fluid > .row p {
-    padding-top: 8px;
-    font-size: 16px;
+.row #footer1 p {
+    padding-top: 5px;
+    font-family: Roboto;
+    font-size: 13px;
     color: #FFFFFF;
 }
 
-.container-fluid > .row a {
-    padding-top: 8px;
-    font-size: 16px;
+#footer2 {
+    padding-top: 3px;
+    font-family: Roboto;
+    font-size: 13px;
+    color: #FFFFFF;
+}
+
+.row #footer2 a {
     color: #FFFFFF;
 }
 
@@ -370,4 +390,121 @@ textarea
 {
     border-radius: 50px;
 }
+
+
+@media (min-width: 100px) and (max-width: 300px) {
+
+    .container-fluid .row {
+        /*background: #21a4de;*/
+        font-family: Roboto;
+        background: #21a4de;
+        height: 50px;
+        padding-top: 2px;
+        /*text-align: center;*/
+        color: white;
+    }
+
+    .row #footer1 p {
+        padding-top: 5px;
+        font-family: Roboto;
+        font-size: 13px;
+        color: #FFFFFF;
+    }
+
+    #footer2 {
+        /*padding-top: 3px;*/
+        /*width: 50%;*/
+        font-family: Roboto;
+        font-size: 12px;
+        color: #FFFFFF;
+    }
+
+}
+@media (min-width: 301px) and (max-width: 450px) {
+
+    .container-fluid .row {
+        /*background: #21a4de;*/
+        font-family: Roboto;
+        background: #21a4de;
+        height: 50px;
+        padding-top: 2px;
+        /*text-align: center;*/
+        color: white;
+    }
+
+    .row #footer1 p {
+        padding-top: 5px;
+        font-family: Roboto;
+        font-size: 13px;
+        color: #FFFFFF;
+    }
+
+    #footer2 {
+        /*padding-top: 3px;*/
+        /*width: 50%;*/
+        font-family: Roboto;
+        font-size: 12px;
+        color: #FFFFFF;
+    }
+
+}
+@media (min-width: 451px) and (max-width: 768px) {
+    .container-fluid .row {
+        /*background: #21a4de;*/
+        font-family: Roboto;
+        background: #21a4de;
+        height: 50px;
+        padding-top: 2px;
+        /*text-align: center;*/
+        color: white;
+    }
+
+    .row #footer1 p {
+        padding-top: 5px;
+        font-family: Roboto;
+        font-size: 13px;
+        color: #FFFFFF;
+    }
+
+    #footer2 {
+        padding-top: 4px;
+        /*width: 50%;*/
+        font-family: Roboto;
+        font-size: 13px;
+        color: #FFFFFF;
+    }
+}
+@media (min-width: 769px) and (max-width: 991px) {
+
+    .container-fluid .row {
+        /*background: #21a4de;*/
+        font-family: Roboto;
+        background: #21a4de;
+        height: 50px;
+        padding-top: 2px;
+        /*text-align: center;*/
+        color: white;
+    }
+
+    .row #footer1 p {
+        padding-top: 5px;
+        font-family: Roboto;
+        font-size: 13px;
+        color: #FFFFFF;
+    }
+
+    #footer2 {
+        padding-top: 4px;
+        /*width: 50%;*/
+        font-family: Roboto;
+        font-size: 13px;
+        color: #FFFFFF;
+    }
+
+}
+@media (min-width: 300px) and (max-width: 768px) {
+}
+/**************************************
+form element
+**************************************/
 
