--- a/public/plugins/index/css/content1.css
+++ b/public/plugins/index/css/content1.css
@@ -1,5 +1,5 @@
 figure.snip1166 {
-    /*font-family: 'Raleway', Arial, sans-serif;*/
+    font-family: Roboto;
     color: #fff;
     position: relative;
     float: left;
@@ -47,6 +47,7 @@ figure.snip1166 p {
     right: 0;
 }
 figure.snip1166 h3 {
+    font-family: Roboto;
     padding: 0 30px 0 15px;
     color: #ffffff;
     background-color: #1a1a1a;
@@ -84,8 +85,8 @@ figure.snip1166 h3:before {
 figure.snip1166 p {
     padding: 8px 45px;
     opacity: 0;
-    font-size: 0.9em;
-    font-weight: 500;
+    font-size: 1em;
+    font-weight: 700;
     left: 0;
     -webkit-transform: translate3d(0%, -150%, 0);
     transform: translate3d(0%, -150%, 0);
