--- a/public/plugins/index/css/index.css
+++ b/public/plugins/index/css/index.css
@@ -213,13 +213,12 @@
 
 #banner {
     width: 100%;
-    height: 700px;
+    height: 650px;
     background-color: #0c0c0c;
     padding-top: 0px;
 }
 
-#contentRadio h1
-{
+#contentRadio h1 {
     background: #21a4de;
     font-family: Roboto;
     padding: 85px 0px;
@@ -227,14 +226,11 @@
     color: white;
 }
 
-
-#leipel h1
-{
+#leipel h1 {
     margin: 20px 0px;
 }
 
-#leipel p
-{
+#leipel p {
     font-family: Roboto;
     color: #ababab;
 }
@@ -306,13 +302,10 @@
     color: #ababab;
 }
 
-textarea
-{
+textarea {
 
     resize: none;
 }
-
-
 
 .container-fluid .row {
     /*background: #21a4de;*/
@@ -342,57 +335,72 @@ textarea
     color: #FFFFFF;
 }
 
-#formOp input
-{
+#formOp input {
     border: 1px;
     border-style: solid;
-    border-color: #21a4de ;
+    border-color: #21a4de;
 }
 
-#formOp textarea
-{
+#formOp textarea {
     border: 1px;
     border-style: solid;
-    border-color: #21a4de ;
+    border-color: #21a4de;
 }
 
 .modal-header {
     padding: 0;
 }
+
 .modal-header .close {
     padding: 10px 15px;
 }
+
 .modal-header ul {
     border: none;
 }
+
 .modal-header ul li {
     margin: 0;
 }
+
 .modal-header ul li a {
     border: none;
     border-radius: 0;
 }
+
 .modal-header ul li.active a {
     color: #21a4de;
 }
+
 .modal-header ul li a:hover {
     border: none;
 }
+
 .modal-header ul li a span {
     margin-left: 10px;
 }
+
 .modal-body .form-group {
-    margin-bottom: 10px;
+    font-family: roboto;
+    /*margin-bottom: 10px;*/
 }
 
-
-#modal_footer a/*propia*/
+#modal_footer a /*propia*/
 {
     border-radius: 50px;
 }
 
-
 @media (min-width: 100px) and (max-width: 300px) {
+
+    #slides li h1 img{
+        width: 20%;
+        /*font-size: 50%;*/
+    }
+
+    #slides li h1 span {
+        font-family: Roboto;
+        font-size: 55%;
+    }
 
     .container-fluid .row {
         /*background: #21a4de;*/
@@ -420,6 +428,7 @@ textarea
     }
 
 }
+
 @media (min-width: 301px) and (max-width: 450px) {
 
     .container-fluid .row {
@@ -448,6 +457,7 @@ textarea
     }
 
 }
+
 @media (min-width: 451px) and (max-width: 768px) {
     .container-fluid .row {
         /*background: #21a4de;*/
@@ -474,6 +484,7 @@ textarea
         color: #FFFFFF;
     }
 }
+
 @media (min-width: 769px) and (max-width: 991px) {
 
     .container-fluid .row {
@@ -502,8 +513,10 @@ textarea
     }
 
 }
+
 @media (min-width: 300px) and (max-width: 768px) {
 }
+
 /**************************************
 form element
 **************************************/
