--- a/public/plugins/index/css/index.css
+++ b/public/plugins/index/css/index.css
@@ -3,7 +3,8 @@
 }
 
 #containerS {
-    position: relative;
+    position: absolute;
+    left: 0px;
     width: 100%;
     height: 100%;
     overflow: hidden;
@@ -30,7 +31,7 @@
     left: 20px;
     z-index: 2;
     padding-top: 5px;
-    font-family: "Reem Kufi", sans-serif;
+    font-family: Roboto;
     font-size: 5em;
     color: white;
     overflow: hidden;
@@ -212,29 +213,27 @@
 }
 
 #banner {
+    /*tamañodel slaider*/
     width: 100%;
-    height: 700px;
+    height: 650px;
     background-color: #0c0c0c;
     padding-top: 0px;
+    padding-bottom: 730px;
 }
 
-#contentRadio h1
-{
+#contentRadio h1 {
     background: #21a4de;
     font-family: Roboto;
-    padding: 85px 0px;
+    padding: 20px 0px;
     font-size: 35px;
     color: white;
 }
 
-
-#leipel h1
-{
+#leipel h1 {
     margin: 20px 0px;
 }
 
-#leipel p
-{
+#leipel p {
     font-family: Roboto;
     color: #ababab;
 }
@@ -306,15 +305,12 @@
     color: #ababab;
 }
 
-textarea
-{
+textarea {
 
     resize: none;
 }
 
-
-
-.container-fluid .row {
+.container-fluidS .row {
     /*background: #21a4de;*/
     font-family: Roboto;
     background: #21a4de;
@@ -342,57 +338,72 @@ textarea
     color: #FFFFFF;
 }
 
-#formOp input
-{
+#formOp input {
     border: 1px;
     border-style: solid;
-    border-color: #21a4de ;
+    border-color: #21a4de;
 }
 
-#formOp textarea
-{
+#formOp textarea {
     border: 1px;
     border-style: solid;
-    border-color: #21a4de ;
+    border-color: #21a4de;
 }
 
 .modal-header {
     padding: 0;
 }
+
 .modal-header .close {
     padding: 10px 15px;
 }
+
 .modal-header ul {
     border: none;
 }
+
 .modal-header ul li {
     margin: 0;
 }
+
 .modal-header ul li a {
     border: none;
     border-radius: 0;
 }
+
 .modal-header ul li.active a {
     color: #21a4de;
 }
+
 .modal-header ul li a:hover {
     border: none;
 }
+
 .modal-header ul li a span {
     margin-left: 10px;
 }
+
 .modal-body .form-group {
-    margin-bottom: 10px;
+    font-family: roboto;
+    /*margin-bottom: 10px;*/
 }
 
-
-#modal_footer a/*propia*/
+#modal_footer a /*propia*/
 {
     border-radius: 50px;
 }
 
-
 @media (min-width: 100px) and (max-width: 300px) {
+
+    #slides li h1 img{
+        width: 20%;
+        /*font-size: 50%;*/
+    }
+
+    #slides li h1 span {
+        font-family: Roboto;
+        font-size: 55%;
+    }
 
     .container-fluid .row {
         /*background: #21a4de;*/
@@ -420,6 +431,7 @@ textarea
     }
 
 }
+
 @media (min-width: 301px) and (max-width: 450px) {
 
     .container-fluid .row {
@@ -448,6 +460,7 @@ textarea
     }
 
 }
+
 @media (min-width: 451px) and (max-width: 768px) {
     .container-fluid .row {
         /*background: #21a4de;*/
@@ -474,6 +487,7 @@ textarea
         color: #FFFFFF;
     }
 }
+
 @media (min-width: 769px) and (max-width: 991px) {
 
     .container-fluid .row {
@@ -502,8 +516,10 @@ textarea
     }
 
 }
+
 @media (min-width: 300px) and (max-width: 768px) {
 }
+
 /**************************************
 form element
 **************************************/
