Modulo de stream tv, Modulo de balance de tickets ,Modificacion en el pago por deposito añadindo el campo "referencia", Modificacion en la pantalla de compra de paquetes permientiendo actualizar las cantidad de tickets que se estan comprando con cada paquete. En la pantalla de redes de referidos se añadio el mensaje debajo del total y se organizo lo referido desde ultimo al primero. Se organizaron los iconos del home y opciones del menun segun recomndaciones. autoplay a las radios .Adelato en el modulo de peliculas.

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1022,7 +1022,7 @@ PANELS CONFIGURATIONS
     box-shadow: 0 2px 1px rgba(0, 0, 0, 0.2);
 }
 .refe {
-    height: 160px;
+    height: 160%;
     box-shadow: 0 2px 1px rgba(0, 0, 0, 0.2);
 }
 
