--- a/public/plugins/index/css/content1.css
+++ b/public/plugins/index/css/content1.css
@@ -53,7 +53,7 @@ figure.snip1166 h3 {
     background-color: #1a1a1a;
     display: inline-block;
     font-weight: 400;
-    line-height: 40px;
+    line-height: initial;
     text-transform: uppercase;
     top: 30%;
     right: 0;
@@ -143,7 +143,7 @@ figure.snip1166.navy h3:after {
     border-color: transparent transparent transparent #21a4de;
 }
 figure.snip1166.navy h3:before {
-    border-color: #07090c transparent transparent transparent;
+    border-color: #0000 transparent transparent transparent;
 }
 figure.snip1166:hover img,
 figure.snip1166.hover img {
