Modificacion en pantallas de inicio de sesion, radios, referals y tv

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1164,6 +1164,12 @@ PANELS CONFIGURATIONS
 	margin-bottom: 15px;
 	color: #f5f5f5;
 }
+.panel2 {
+    background: #23B5E6;
+    padding: 3px;
+    margin-bottom: 15px;
+    color: #f5f5f5;
+}
 .white-panel .small {
 	font-size: 10px;
 	color: #ccd1d9;
