--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -796,7 +796,7 @@ ul.top-menu > li > a:hover, ul.top-menu > li > a:focus {
 /* Dash Side */
 
 .ds {
-	background: #f2f2f2;
+	background: #ffffff;
 	padding-top: 20px;
 }
 
