Modificaciones para el index: - Vista de las radios - Validacion del formulario para el registro de un usuario (error cuando pasaba con un correo existente) Modificacion de variable para el cobro de paquetes de tickets Archivos modificados: - Welcome.blade.php - content1.css - HomeController.php

--- a/public/plugins/index/css/content1.css
+++ b/public/plugins/index/css/content1.css
@@ -48,7 +48,7 @@ figure.snip1166 p {
 }
 figure.snip1166 h3 {
     font-family: Roboto;
-    padding: 0 30px 0 15px;
+    padding: 10px 30px 0px 15px;
     color: #ffffff;
     background-color: #1a1a1a;
     display: inline-block;
@@ -57,6 +57,7 @@ figure.snip1166 h3 {
     text-transform: uppercase;
     top: 30%;
     right: 0;
+    bottom: -12px;
     left: 30px;
     z-index: 1;
     -webkit-transform: translateY(-50%);
@@ -98,7 +99,7 @@ figure.snip1166 a {
     right: 0;
     top: 0;
     bottom: 0;
-    position: absolute;
+    position: relative;
 }
 figure.snip1166.blue h3 {
     background-color: #21a4de;
