Ajuste de responsive menu, ajuste en tv y reproduccion de radios

--- a/public/assets/css/style-responsive.css
+++ b/public/assets/css/style-responsive.css
@@ -24,6 +24,12 @@
         position: absolute;
     }
 
+    .sidebar-close .main-chart{
+        margin-top: 390px
+    }
+    .sidebar-closed .main-chart{
+        margin-top: 0px
+    }
     /*sidebar*/
 
     #sidebar {
@@ -86,7 +92,7 @@
 
     /* sidebar collabler */
     #sidebar .btn-navbar.collapsed .arrow {
-        display: none;
+        /*display: none;*/
     }
 
     #sidebar .btn-navbar .arrow {
