--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -790,12 +790,20 @@ ul.top-menu > li > a:hover, ul.top-menu > li > a:focus {
     display: none;
 }
 
-.sidebar-closed #main-content {
+.sidebar-closed #main-content{
     margin-left: 0px;
+    margin-top: 0px;
 }
 
 .sidebar-closed #sidebar {
     margin-left: -180px;
+    margin-top: -460px;
+}
+.sidebar-closed .main-chart {
+     margin-top: -20px;
+}
+.sidebar-close .main-chart{
+    margin-top: 0px;
 }
 
 
