Cambios en reproductor tv, radios, listado de radios y v por tamaño de logo y arreglos de responsive

--- a/public/assets/css/style-responsive.css
+++ b/public/assets/css/style-responsive.css
@@ -24,12 +24,12 @@
         position: absolute;
     }
 
-    .sidebar-close .main-chart{
+/*    .sidebar-close .main-chart{
         margin-top: 390px
     }
     .sidebar-closed .main-chart{
         margin-top: 0px
-    }
+    }*/
     /*sidebar*/
 
     #sidebar {
