--- a/public/plugins/materialize_adm/css/style.css
+++ b/public/plugins/materialize_adm/css/style.css
@@ -142,6 +142,15 @@ nav ul a {
     background: linear-gradient(40deg,#ff6ec4,#7873f5)!important;
 }
 
+/* ----------------------------
+ * Titulos Principales
+ * ----------------------------
+ */
+
+.titelgeneral {
+    color: #9e9e9e;
+    font-size: 36px;
+}
 
 
 /*Modal */
