--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -1,3 +1,34 @@
+    .owl-carousel.owl-drag .owl-item {
+        padding-left: 2px ;
+        padding-right: 2px;
+    }
+
+    .owl-nav {
+        padding: 0px;
+    }
+
+    .owl-theme .owl-nav [class*='owl-'] {
+        transition: all .3s ease;
+    }
+    .owl-theme .owl-nav [class*='owl-'].disabled:hover {
+        background-color: #D6D6D6;
+    }
+    owl-theme {
+        position: relative;
+    }
+    .owl-theme .owl-next, .owl-theme .owl-prev {
+            width: 22px;
+            height: 22px;
+            position: absolute;
+            top: 50%;
+            transform: translateY(-125%)
+        }
+    .owl-theme .owl-prev {
+            left: 10px;
+        }
+    .owl-theme .owl-next {
+        right: 10px;
+    }
 
     .default_color{background-color: #FFFFFF !important;}
 
